--- a/style.css
+++ b/style.css
@@ -1,15 +1,131 @@
-*{
-    margin:0;
-    padding:0;
+@import url('https://fonts.googleapis.com/css2?family=Klee+One&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
 }
-main{
-    display:flex;
-    justify-content:center;
-    align-items:center;
+
+body {
+
+    background-color: black;
 }
-.action{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    
+
+header {
+
+    background-color: transparent;
+    width: auto;
+    height: 30vh;
+    color: white;
+
+
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+}
+
+img {
+    width: 50px;
+}
+
+main {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+
+}
+
+.action {
+    margin-top: 10px;
+    text-align: center;
+    background: linear-gradient(#7780F3, #5352EE);
+    gap: 50px;
+    padding: 20px;
+    border-radius: 20px;
+
+    ::placeholder {
+        font-family: "Klee One", cursive;
+    }
+
+}
+
+h1 {
+    font-family: "Klee One", cursive;
+    font-size: 50px;
+}
+
+.tache {
+    margin: 20px;
+}
+
+
+
+
+
+input {
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 20px;
+    border: no-border;
+
+}
+
+input:hover {
+
+    border-top: 6px solid rgb(184, 224, 75);
+    border-bottom: 6px solid rgb(164, 216, 22);
+    border-left: 6px solid rgb(205, 113, 147);
+    border-right: 6px solid rgb(36, 151, 197);
+}
+
+.list {
+    margin-top: 20px;
+    width: 400px;
+    height: 400px;
+    background: linear-gradient(#7780F3, #5352EE);
+    color: black;
+    border-top-left-radius: 20PX;
+    border-top-right-radius: 20px;
+
+
+}
+
+button {
+    width: 30px;
+    border-radius: 20%;
+
+}
+
+.list img {
+    width: 50px;
+}
+
+ul {
+    background: linear-gradient(rgb(26, 24, 24), rgb(154, 147, 147));
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+li {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    font-size: 30px;
+    gap: 10px;
+    font-family: "Klee One", cursive;
+    color: white;
+}
+
+li button {
+    padding: 15px;
+}
+
+@media(max-width:498px) {}
