modernisation du site

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 }
 
 body {
-
     background-color: black;
 }
 
@@ -14,18 +13,23 @@ header {
 
     background-color: transparent;
     width: auto;
-    height: 30vh;
+    height: 20vh;
     color: white;
-
-
 }
 
 nav {
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 20px;
+    width: 100%;
+    margin: 20px;
+}
 
+nav img {
+    width: 20px;
+}
+
+nav ul li {
+    list-style-type: none;
 }
 
 img {
@@ -43,89 +47,87 @@ main {
 }
 
 .action {
-    margin-top: 10px;
     text-align: center;
     background: linear-gradient(#7780F3, #5352EE);
     gap: 50px;
     padding: 20px;
-    border-radius: 20px;
 
     ::placeholder {
         font-family: "Klee One", cursive;
     }
 
+    border-radius: 20px;
+
 }
 
 h1 {
     font-family: "Klee One", cursive;
-    font-size: 50px;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
 }
 
 .tache {
+    gap: 20px;
+    width: auto;
     margin: 20px;
+
 }
-
-
-
-
 
 input {
     padding: 10px;
-    font-size: 20px;
-    text-align: center;
+    font-size: 15px;
     border-radius: 20px;
-    border: no-border;
+    border: none;
+
+
 
 }
 
-input:hover {
-
-    border-top: 6px solid rgb(184, 224, 75);
-    border-bottom: 6px solid rgb(164, 216, 22);
-    border-left: 6px solid rgb(205, 113, 147);
-    border-right: 6px solid rgb(36, 151, 197);
-}
 
 .list {
     margin-top: 20px;
     width: 400px;
-    height: 400px;
+    height: 200px;
     background: linear-gradient(#7780F3, #5352EE);
-    color: black;
     border-top-left-radius: 20PX;
     border-top-right-radius: 20px;
+    border-radius: 20px;
 
 
 }
 
 button {
-    width: 30px;
+    width: 35px;
     border-radius: 20%;
-
+    border: none;
+    height: 35px;
+    color: white;
+    background-color: blue;
+    position: relative;
+    right: -10px;
 }
+
+
 
 .list img {
     width: 50px;
 }
 
-ul {
-    background: linear-gradient(rgb(26, 24, 24), rgb(154, 147, 147));
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-}
 
-li {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-    font-size: 30px;
-    gap: 10px;
-    font-family: "Klee One", cursive;
-    color: white;
-}
+@media(max-width:498px) {
+    body {
+        margin-bottom: 10px;
+    }
 
-li button {
-    padding: 15px;
-}
+    .action {
+        width: 82%;
+        margin-left: 15px;
+        display: block;
 
-@media(max-width:498px) {}
+        align-items: center;
+
+    }
+
+
+}
