--- a/style.css
+++ b/style.css
@@ -1,122 +1,118 @@
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-:root {
-  --white: #fafafb;
-  --purple: #9a67ea;
-  --blue-light: #04d4c3;
-  --blue-dark: #2a73c2;
-  --green: #2c7b90;
-}
-
-body {
-  background: linear-gradient(to bottom, var(--purple), var(--blue-light));
-  height: 100vh;
-  font-family: "Prompt", sans-serif;
-}
-
-.container {
-  max-width: 80%;
-  width: 400px;
-  height: 600px;
-  margin: 0 auto;
-}
-
-.profil h1 {
-  color: var(--white);
-}
-
-.profil span {
-  color: var(--white);
-  letter-spacing: 1px;
-}
-
-#date {
-  color: var(--white);
-  padding: 50px 0 5px 0px;
-}
-
-.ajouter-tache {
-  background-color: var(--white);
-  border-radius: 15px;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  gap: 70px;
-  padding: 10px;
-  margin: 40px 0;
-}
-
-.ajouter-tache input {
-  width: 100%;
-  height: 100%;
-  border-radius: 8px;
-  border: none;
-  background-color: var(--white);
-  padding-left: 10px;
-}
-.ajouter-tache input::placeholder {
-  font-size: 1.1rem;
-  color: var(--purple);
-}
-
-.ajouter-tache i {
-  font-size: 50px;
-  color: var(--purple);
-}
-.ajouter-tache i:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
-
-.section-tache h3 {
-  color: var(--white);
-  margin-bottom: 20px;
-}
-
-.section-tache li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: linear-gradient(to bottom, var(--blue-dark), var(--green));
-  border-radius: 15px;
-  padding: 10px;
-  color: var(--white);
-  margin: 5px 0;
-}
-.section-tache i {
-  font-size: 25px;
-}
-
-.section-tache > ul p {
-  font-size: 1.2rem;
-}
-
-.section-tache i:hover {
-  color: var(--blue-light);
-  cursor: pointer;
-}
-
-.line-through {
-  text-decoration: line-through;
-  color: var(--blue-light);
-}
-
-#listeTerminer .text {
-  color: #888;
-}
-
-#listeTerminer li {
-  background: linear-gradient(to bottom, var(--blue-dark), var(--green));
-}
-
-#listeTerminer i {
-  color: var(--blue-light);
-}
-
-#listeTerminer i:hover {
-  color: var(--blue-dark);
-}
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  :root {
+    --white: #FAFAFB;
+    --purple: #9A67EA;
+    --blue-light: #04D4C3;
+    --blue-dark: #2A73C2;
+    --green: #2C7B90;
+  }
+  body {
+    background: linear-gradient(to bottom, var(--purple), var(--blue-light));
+    height: 100vh;
+    font-family: "Prompt", sans-serif;
+  }
+  .container {
+    max-width: none;
+    width: 500px;
+    height: 600px;
+    margin: 0 auto;
+  }
+  .profil h1 {
+    color: var(--white);
+  }
+  .profil span {
+    color: var(--white);
+    letter-spacing: 1px;
+  }
+  #date {
+    color: var(--white);
+    padding: 50px 0 5px 0px;
+  }
+  .ajouter-tache {
+    background-color: var(--white);
+    border-radius: 15px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    padding: 10px;
+    margin: 40px 0;
+  }
+  .ajouter-tache input {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    border: none;
+    background-color: var(--white);
+    padding-left: 10px;
+  }
+  .ajouter-tache input::placeholder {
+    font-size: 1.1rem;
+    color: var(--purple);
+  }
+  .ajouter-tache i {
+    font-size: 50px;
+    color: var(--purple);
+  }
+  .ajouter-tache i:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+  .section-tache h3 {
+    color: var(--white);
+    margin-bottom: 20px;
+  }
+  .section-tache li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(to bottom, var(--blue-dark), var(--green));
+    border-radius: 15px;
+    padding: 10px;
+    color: var(--white);
+    margin: 5px 0;
+  }
+  .section-tache i {
+    font-size: 25px;
+  }
+  .section-tache > ul p {
+    font-size: 1.2rem;
+  }
+  .section-tache i:hover {
+    color: var(--blue-light);
+    cursor: pointer;
+  }
+  .line-through {
+    text-decoration: line-through;
+    color: var(--blue-light);
+  }
+  #listeTerminer .text {
+    color: #888;
+  }
+  #listeTerminer li {
+    background: linear-gradient(to bottom, var(--blue-dark), var(--green));
+  }
+  #listeTerminer i {
+    color: var(--blue-light);
+  }
+  #listeTerminer i:hover {
+    color: var(--blue-dark);
+  }
+  .liste-container {
+    display: flex;
+    gap: 20px;
+  }
+  .section-tache {
+    flex: 1;
+  }
+  #liste {
+    margin-bottom: 20px;
+  }
+  .section-tache {
+    flex: 1;
+    max-width: 50%;
+  }
